--- a/AssetsFix2/MI Design baru.css
+++ b/AssetsFix2/MI Design baru.css
@@ -1,6 +1,6 @@
 .banner {
   height: 80vh;
-  background: url('D:/SEMESTER 5 NI BOSS/Pengembangan App web/Web App/img/39686691_1221249254683716_6143632910822932480_n.jpg') no-repeat;
+  background: url('img/39686691_1221249254683716_6143632910822932480_n.jpg') no-repeat;
   background-size: cover;
   position: relative;
   display: flex;
